fix nav-bar, z-index, card, click-btn

--- a/css/style.scss
+++ b/css/style.scss
@@ -34,10 +34,6 @@ body {
     border-radius: 50%;
     margin: 2px 0;
     border: 2px solid grey;
-    z-index: 100;
-    &:hover {
-        transform: scale(1.1);
-    }
 }
 
 li {
@@ -58,7 +54,7 @@ h1, h2, h3 {
     width: 2rem;
     position: absolute;
     transform: translate(-50%, -50%);
-    z-index: 99;
+    z-index: auto;
 }
 nav {
 
@@ -67,7 +63,9 @@ nav {
     display: block;
     width: 100%;
     top: -400px;
-    z-index: 98;
+    z-index: auto;
+    opacity: 0;
+    transition: 1s ease-in-out;
     div {
         
         ul {
@@ -126,6 +124,7 @@ nav {
 
         .card {
             width: 20%;
+            min-width: 250px;
             height: 21rem;
             margin: 2em;
             border: 1.5px solid rgba(119, 119, 119, 0.826);
@@ -144,7 +143,6 @@ nav {
                 top: 2em;
                 left: 50%;
                 transform: translateX(-50%);
-                z-index: 96;
             }
             .card-title {
                 position: absolute;
@@ -162,7 +160,7 @@ nav {
                 height: 21em;
                 border-radius: 10px;
                 position: absolute;
-                z-index: 97;
+                z-index: auto;
                 transition: 1s ease-in-out;
 
                 .title {
@@ -272,4 +270,15 @@ footer {
     }
     }
 }
+    }
+
+    @media screen and (max-width: 850px) {
+        #section-1 > div {
+            flex-direction: column;
+            justify-content: center;
+            padding: 2%;
+        }
+        #section-1 > div {
+            flex-wrap: wrap;
+        }
     }
